@@ -7,19 +7,26 @@ import java.util.Map;
 import java.util.Set;
 
 /**
- * The positions whose ends this reading did not work out, and what stands between each of them and
+ * The numbers of one value whose ends nothing worked out, and what stands between each of them and
  * the walk that raises a rule's questions.
  *
- * <p>One question and one answer: of the ends a part of a clause states, which are the ones this
- * reading did not work out. Whether anybody can be in a branch, which positions a choice leaves as
- * wide as they are, and whether the model raises a question anywhere are three other questions with
- * three other owners, and nothing here decides any of them — what is done with their answers is to
- * strike positions off this one.
+ * <p>One question and one answer: of the ends a part of a clause states, which are the ones nothing
+ * worked out. Whether anybody can be in a branch, which positions a choice leaves as wide as they
+ * are, and whether the model raises a question anywhere are three other questions with three other
+ * owners, and nothing here decides any of them — what is done with their answers is to strike
+ * numbers off this one.
  *
- * <p><b>A choice never puts a position in here.</b> {@link #either} keeps only what its alternatives
- * brought to it, so a choice can strike a position off and can add none: it may show that the branch
- * beside an unfollowed one leaves the position at every value, and it has nothing else to say. So a
- * position here was put here by a leaf the reading gave up on, and the choices above it are the
+ * <p><b>What stands at a place, and never a number an operation answers of it.</b> Both are numbers
+ * a rule can state a line on, and they are two orders with two readings — so the second is left
+ * open where its own reading settles what the alternatives leave it
+ * ({@link BoundaryState}), and reaches a document by the road this one takes. Carried here as well,
+ * the rule below would be asked whether the branch beside it bounds a length, which is a question
+ * the reading of ends has no word for and would answer no to.
+ *
+ * <p><b>A choice never puts a number in here.</b> {@link #either} keeps only what its alternatives
+ * brought to it, so a choice can strike a number off and can add none: it may show that the branch
+ * beside an unfollowed one leaves the number at every value, and it has nothing else to say. So a
+ * number here was put here by a leaf whose reading gave up on it, and the choices above it are the
  * road, not the source.
  *
  * <p><b>The road is what says whether anything else is telling a reader.</b> The walk that turns a
@@ -41,14 +48,13 @@ import java.util.Set;
  * that is a fact about the rule rather than about how it was bracketed, and
  * {@code (a || b) || c} and {@code a || (b || c)} come to the same choices either way round.
  *
- * @param byPosition every position whose end this part left open, each with what stands between it
- *                   and the walk. Empty where the part's ends were all worked out
+ * @param byNumber every number whose end this part left open, under the name its own reading files
+ *                 it by. Empty where the part's ends were all worked out
  */
-record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
+record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byNumber) {
 
     /**
-     * What stands between one end this reading did not work out and the walk that raises a rule's
-     * questions.
+     * What stands between one end nothing worked out and the walk that raises a rule's questions.
      *
      * @param named        the choices to send an author to, empty where none can be named
      * @param underAChoice whether a choice an author wrote stands between. False is what says the
@@ -102,8 +108,8 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
     EndsLeftOpen {
         // As {@link Behind} is copied, and empty for the same reason: a leaf whose ends this
         // reading worked out makes one of these, and that is every leaf of every clause.
-        byPosition = byPosition.isEmpty() ? Map.of()
-                : Collections.unmodifiableMap(new LinkedHashMap<>(byPosition));
+        byNumber = byNumber.isEmpty() ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(byNumber));
     }
 
     /** A part whose ends this reading worked out, and one no reading has a word for at all. */
@@ -112,17 +118,20 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
     }
 
     /**
-     * One leaf, as the reading of ends answered for it.
+     * One leaf, as a reading answered for it.
      *
-     * <p>Handed the positions rather than asked for them: whether this reading followed the rule to
-     * the end is the reading's own answer ({@code OrderedReading.gaveUpAt}) and which positions the
-     * leaf is about is the clause's, and both are in hand where a leaf is read. A leaf it followed
-     * brings nothing here, whatever it found — a rule read from end to end that places no end is
-     * one this reading answered.
+     * <p>Handed the numbers rather than asked for them: whether a reading followed the rule to the
+     * end is that reading's own answer, and which numbers the leaf is about is what it states —
+     * both are in hand where a leaf is read, and neither is anything this type could work out. A
+     * leaf a reading followed brings nothing here, whatever it found: a rule read from end to end
+     * that places no end is one that reading answered.
      */
-    static EndsLeftOpen at(Set<FactSubject> positions) {
+    static EndsLeftOpen at(Set<FactSubject> numbers) {
+        if (numbers.isEmpty()) {
+            return NOTHING;
+        }
         Map<FactSubject, Behind> out = new LinkedHashMap<>();
-        positions.forEach(each -> out.put(each, Behind.aLeaf()));
+        numbers.forEach(each -> out.put(each, Behind.aLeaf()));
         return new EndsLeftOpen(out);
     }
 
@@ -134,14 +143,14 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
      * conjunction leaves the end at a position either of its parts left open still open.
      */
     EndsLeftOpen both(EndsLeftOpen other) {
-        if (other.byPosition.isEmpty()) {
+        if (other.byNumber.isEmpty()) {
             return this;
         }
-        if (byPosition.isEmpty()) {
+        if (byNumber.isEmpty()) {
             return other;
         }
-        Map<FactSubject, Behind> out = new LinkedHashMap<>(byPosition);
-        other.byPosition.forEach((position, behind) -> out.merge(position, behind, Behind::and));
+        Map<FactSubject, Behind> out = new LinkedHashMap<>(byNumber);
+        other.byNumber.forEach((position, behind) -> out.merge(position, behind, Behind::and));
         return new EndsLeftOpen(out);
     }
 
@@ -167,13 +176,13 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
      */
     EndsLeftOpen either(ChoiceSite choice, Adoption<FactSubject, ReadingLanguage.Order> mine,
                         EndsLeftOpen other, Adoption<FactSubject, ReadingLanguage.Order> theirs) {
-        if (byPosition.isEmpty() && other.byPosition.isEmpty()) {
+        if (byNumber.isEmpty() && other.byNumber.isEmpty()) {
             return NOTHING;
         }
         Map<FactSubject, Behind> out = new LinkedHashMap<>();
-        byPosition.forEach((position, behind) ->
+        byNumber.forEach((position, behind) ->
                 keptUnder(choice, position, behind, other, theirs, out));
-        other.byPosition.forEach((position, behind) ->
+        other.byNumber.forEach((position, behind) ->
                 keptUnder(choice, position, behind, this, mine, out));
         return new EndsLeftOpen(out);
     }
@@ -187,11 +196,11 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
      * and are carried with no choice to name.
      */
     EndsLeftOpen underACollapsedChoice() {
-        if (byPosition.isEmpty()) {
+        if (byNumber.isEmpty()) {
             return this;
         }
         Map<FactSubject, Behind> out = new LinkedHashMap<>();
-        byPosition.forEach((position, behind) ->
+        byNumber.forEach((position, behind) ->
                 out.put(position, behind.underACollapsedChoice()));
         return new EndsLeftOpen(out);
     }
@@ -211,7 +220,7 @@ record EndsLeftOpen(Map<FactSubject, EndsLeftOpen.Behind> byPosition) {
                                   EndsLeftOpen beside,
                                   Adoption<FactSubject, ReadingLanguage.Order> theirs,
                                   Map<FactSubject, Behind> out) {
-        if (!theirs.constrains(position) && !beside.byPosition.containsKey(position)) {
+        if (!theirs.constrains(position) && !beside.byNumber.containsKey(position)) {
             return;
         }
         out.merge(position, behind.under(choice), Behind::and);
